# lumina-forge

./: .editorconfig  .gitignore  LICENSE  README.md  justfile  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: _README.md  index.html  package.json  tsconfig.json  vite.config.ts
app/scripts/: rasterize_logo.mjs
app/src/: App.tsx  main.tsx  router.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  save_import.rs
docs/: _README.md  architecture.md  brand.md  future-work.md  scraping.md
examples/: gustave-basic.json
scripts/: _api_entry.py  build_api_exe.py
vault/: 00_Overview.md
vault/.obsidian/: app.json  core-plugins.json
vault/Builds/: _README.md  gustave-early-free-aim.md  gustave-overcharge.md  lune-early-fire-lightning.md  lune-elemental-burst.md  maelle-early-pre-sword-ballet.md  maelle-endgame-burning-canvas.md  maelle-stance-dps.md  monoco-mask-swap.md  sciel-crit-sniper.md  sciel-early-lone-wolf.md  sciel-endgame-support.md  verso-dualist.md  verso-endgame-burn-stacker.md
vault/Characters/: _README.md  gustave.md  lune.md  maelle.md  monoco.md  sciel.md  verso.md
vault/Formulas/: _README.md  cap-9999.md  critical-hits.md  damage-formula.md  gradient-bonus.md  painted-power.md  status-effects.md
vault/Luminas/: _README.md  accelerating-heal.md  accelerating-last-stand.md  accelerating-shots.md  accelerating-tint.md  aegis-revival.md  alternating-critical.md  anti-blight.md  anti-burn.md  anti-charm.md  anti-freeze.md  anti-stun.md  ap-discount.md  at-death-s-door.md  attack-lifesteal.md  augmented-aim.md  augmented-attack.md  augmented-counter-i.md  augmented-counter-ii.md  augmented-counter-iii.md  augmented-first-strike.md  auto-death.md  auto-powerful.md  auto-regen.md  auto-rush.md  auto-shell.md  base-shield.md  beneficial-contamination.md  better-healing-tint.md  bloody-bullet.md  break-specialist.md  breaker.md  breaking-attack.md  breaking-burn.md  breaking-counter.md  breaking-death.md  breaking-shots.md  breaking-slow.md  burn-affinity.md  burning-break.md  (+192 more)
vault/Pictos/: _README.md  accelerating-heal.md  accelerating-last-stand.md  accelerating-shots.md  accelerating-tint.md  aegis-revival.md  alternating-critical.md  anti-blight.md  anti-burn.md  anti-charm.md  anti-freeze.md  anti-stun.md  ap-discount.md  at-death-s-door.md  attack-lifesteal.md  augmented-aim.md  augmented-attack.md  augmented-counter-i.md  augmented-counter-ii.md  augmented-counter-iii.md  augmented-first-strike.md  auto-death.md  auto-powerful.md  auto-regen.md  auto-rush.md  auto-shell.md  base-shield.md  beneficial-contamination.md  better-healing-tint.md  bloody-bullet.md  break-specialist.md  breaker.md  breaking-attack.md  (+199 more)
(+328 files in other folders)
