[package]
name = "lumina-forge"
version = "0.3.1"
description = "lumina-forge desktop shell"
authors = ["Léon Fievet"]
edition = "2021"

[lib]
# Desktop-only on Windows — drop cdylib/staticlib, both trigger the GNU
# linker's 65535-exports limit on Tauri's huge dependency graph. rlib is
# enough for the bin below. Add cdylib back if we ever target Android/iOS.
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

